# army

./: .gitignore  .project  .pydevproject  .travis.yml  MANIFEST.in  README.rst  setup.py
.github/workflows/: main.yml
army/: __init__.py  __main__.py  army.py  army.py.bak  command.py  config.py  debugtools.py  dependency.py  extargparse.py  package.py  plugin.py  repository.py  template.py  version.py
army.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
army/api/: arch.py  argparse.py  click.py  command.py  config.py  console.py  debugtools.py  dict_file.py  extargparse.py  github.py  gitlab.py  log.py  package.py  path.py  plugin.py  prefix.py  profile.py  project.py  repository.py  schema.py  version.py
army/api/click/: __init__.py  core.py  decorators.py
army/commands/: build.py  dependencies.py  packaging.py  project.py
army/commands/build_commands/: build.py  compile.py  install.py  search.py  update.py
army/commands/dependencies_commands/: install.py
army/commands/packaging_commands/: package.py
army/commands/project_commands/: create.py
army/firmware-template/: CMakeLists.txt  firmware.toml
army/firmware-template/firmware/: CMakeLists.txt
army/library-template/: army.toml  library.toml
army/plugin/: version.py
army/plugin-template/: army.toml  plugin.toml
army/plugin/dependency/: __init__.py  install.py  list.py  repos.py  search.py  uninstall.py  update.py
army/plugin/package/: __init__.py  install.py  list.py  login.py  logout.py  package.py  publish.py  repos.py  search.py  uninstall.py  unpublish.py  update.py
army/plugin/profile/: __init__.py  current.py  inspect.py  list.py  pop.py  profile_group.py  push.py  search.py  set.py
army/plugin/project/: __init__.py  init.py  inspect.py
army/plugin/repo/: __init__.py  list.py  login.py  logout.py  registered.py  update.py
army/plugin/repository/: __init__.py  git_repository.py  github_repository.py  gitlab_repository.py  local_git_repository.py  path_repository.py
army/tests/: test_version.py
army/unit_tests/: .army-profile  __main__.py  helper.py  test_argparse.py  test_army_install.py  test_command.py  test_config.py  test_config2.py  test_console.py  test_dependency_install.py  test_dependency_repos.py  test_dependency_search.py  test_dependency_uninstall.py  test_load_dict_file.py  test_plugin.py  test_profile_inspect.py  test_profile_list.py  test_project.py  test_reposity.py  test_schema.py  test_version.py  test_version_range.py
army/unit_tests/test_compile_data/project1/: army.toml
army/unit_tests/test_file_dict_data/json/: config.json
army/unit_tests/test_file_dict_data/json_error/: config.json
army/unit_tests/test_file_dict_data/python/: config.py
army/unit_tests/test_file_dict_data/python_error/: config.py
army/unit_tests/test_file_dict_data/toml/: config.toml
army/unit_tests/test_file_dict_data/toml_error/: config.toml
army/unit_tests/test_file_dict_data/yaml/: config.yaml
army/unit_tests/test_file_dict_data/yaml_error/: config.yaml
army/unit_tests/test_local_repository/lib4/: army.yaml
army/unit_tests/test_local_repository/project2/: army.toml
army/unit_tests/test_local_repository/project3/: army.toml
army/unit_tests/test_local_repository/project5/: army.yaml
army/unit_tests/test_local_repository/project7/: army.yaml
army/unit_tests/test_local_repository_hierarchy/project1-v1.0.0/: army.toml  army.yaml
army/unit_tests/test_local_repository_hierarchy/project1-v1.2.0/: army.toml  army.yaml
army/unit_tests/test_local_repository_hierarchy/project2-v1.3.2/: army.toml  army.yaml
army/unit_tests/test_local_repository_hierarchy/project2-v1.3.4/: army.toml  army.yaml
army/unit_tests/test_local_repository_hierarchy/project3-v2.0.0/: army.toml  army.yaml
army/unit_tests/test_local_repository_hierarchy/project4/: army.toml  army.yaml
army/unit_tests/test_local_repository_hierarchy/project5/: army.toml
docs/: conf.py  index.rst  install.rst  shared.rst
docs/command/: army.rst  install.rst  list.rst  version.rst
docs/command/repo/: list.rst
docs/include/: help.rst
templates/firmware-template/: army.toml
templates/library-template/: army.toml
templates/plugin-template/: army.toml
test/test_click/: group.py  multi.py  multi2.py  multi3.py  section.py  section2.py  simple.py
test/test_click/commands/: hello.py
test/test_decorator/: test1.py
test/test_firmware/: army.toml
test/test_firmware-nodep/: .gitignore  .project  CMakeLists.txt  army.toml
test/test_library1/: .project  army.toml
test/test_library2/: .project  army.toml
test/test_library3/: .project  army.toml
test/test_plugin/: .project
test/test_property/: test1.py
test/test_repository/: .project  index.toml
test/test_schema/: test1.py
(+70 files in other folders)
